feat: prepare jobs modal
